Добавлен принципиальный факт!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li>Календарная осень</li>
       <li>Астрономическая осень</li>
       <li id="climate">Климатическая осень</li>
-      <li>Природа осенью</li>
+      <li>Природа осенью прекрасна!!!</li>
       <li>В живописи</li>
       <li>В массовой культуре</li>
       <li>Ассоциации с жатвой</li>
