Рассмотрены средства разработки в браузерах. Селекторы псевдоклассов, селекторы псевдоэлементов (first-child). Цветовые модели (RGB). Некоторые свойства CSS3. В шаблоне установили тень блока контента. Генератор каркасаов шаблонов, сброс css-свойств.

--- a/template.html
+++ b/template.html
@@ -8,8 +8,18 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        Шапка страницы
-        <ul class="nav">
+        <ul id="common_menu">
+          <li>
+            <a href="#">Login</a>
+          </li>
+          <li>
+            <a href="#">Sitemap</a>
+          </li>
+          <li>
+            <a href="#">Contact us</a>
+          </li>
+        </ul>
+        <ul id="main_menu" class="nav">
           <li>
             <a href="#">Главная</a>
           </li>
@@ -58,8 +68,15 @@
           </ul>
         </div>
         <div id="content">
-          Основное содержимое страницы 
-          При создании веб-страницы часто приходится вкладывать одни теги внутрь других. Чтобы стили для этих тегов использовались корректно, помогут селекторы, которые работают только в определенном контексте. Например, задать стиль для тега только когда он располагается внутри контейнера <p>. Таким образом можно одновременно установить стиль для отдельного тега, а также для тега, который находится внутри другого.</p>
+          <div class="inner">
+            Основное содержимое страницы 
+            При создании веб-страницы часто приходится вкладывать одни теги внутрь других. Чтобы стили для этих тегов использовались корректно, помогут селекторы, которые работают только в определенном контексте. Например, задать стиль для тега только когда он располагается внутри контейнера <p>. Таким образом можно одновременно установить стиль для отдельного тега, а также для тега, который находится внутри другого.</p>
+            <div class="paging">
+              <input type="text" />
+              <input type="text" />
+
+            </div>
+          </div>
         </div>
       </div>
       <div id="footer">
