Позиционирование. Соседние селекторы. Несколько классов в теге. Псевдоэлемент :after. Частично сверстано контекстное меню в сайдбаре.

--- a/template.html
+++ b/template.html
@@ -39,31 +39,19 @@
       </div>
       <div id="middle">
         <div id="sidebar">
-          Боковая панель
-          <ul class="nav">
+          <img class="curr_main_menu" src="img/avi.png" />
+          <h1>Цены</h1>
+          <div class="description">описание текущего раздела</div>
+          <div class="alexey_suranov">Price</div>
+          <ul class="nav context">
             <li>
-              <a href="#">Главная</a>
+              <a href="#">Без НДС</a>
             </li>
             <li>
-              <a href="#">Примеры работ</a>
+              <a href="#">Акционные</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
-            </li>
-            <li>
-              <a href="#">Карта сайта</a>
-            </li>
-            <li>
-              <a href="#">Цены</a>
-            </li>
-            <li>
-              <a href="#">Вопросы и ответы (FAQ)</a>
-            </li>
-            <li>
-              <a href="#">Мы в соц.сетх</a>
-            </li>
-            <li>
-              <a href="#">Галерея</a>
+              <a href="#">Празничные</a>
             </li>
           </ul>
         </div>
